# song-video-maker

./: .env.example  .gitignore  CLAUDE.md  COSTS.md  README.md  config.py  main.py  migrate_workspaces.py  pyproject.toml  requirements.txt  web_app.py
.claude/: launch.json
clips/500_days_of_summer/: scenes.json  video_path.txt
clips/500_days_of_summer/cache/: scene_analysis_google_gemini_2_0_flash_001.json
clips/licorice_pizza/: scenes.json  video_path.txt
clips/licorice_pizza/cache/: scene_analysis_google_gemini_2_0_flash_001.json
models/: __init__.py  lyrics.py  scene.py
outputs_nice_backup/: licorice_pizza_call_it_fate_call_it_karma_plan.json  licorice_pizza_call_it_fate_call_it_karma_plan_readable.txt
pipeline/: cache.py  cli.py  downloader.py  editor.py  frame_sampler.py  lyrics_extractor.py  matcher.py  plan_editor.py  publisher.py  scene_analyzer.py  scene_detector.py
static/: index.html
